# final-submission

./: CMakeLists.txt  logger.cpp  math.cpp
lib/: Logger.cpp  Logger.h  math_functions.cpp  math_functions.h  message_queue_reader.cpp  message_queue_reader.h  message_queue_writer.cpp  message_queue_writer.h  try  try.cpp
